gui: removed unused classes in gui; refactored calculator area; added css file